Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignIntegerTextWrapped.quorum
class main
    action Main
        integer a = "hello"
    end
end